<resources>
    <string name="app_name">MyTestIdeainTech</string>

    <string name="btn_login">SIGN IN</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="first_and_last_name">First and Last name</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="register">REGISTER</string>
    <string name="collab_logo">Collab Logo</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="profile">Profile</string>
    <string name="upload_profile_image">Upload Profile Image</string>
    <string name="screen_name">Screen name</string>
    <string name="sellect_skillsets">Sellect skillsets</string>
    <string name="forgot_password"><u>Forgot password?</u></string>
    <string name="text_view_register"><u>Register</u></string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="sign_in"><u>Sign in</u></string>

    <string-array name="ganges">
        <item>Rock</item>
        <item>Hip Hop</item>
        <item>Pop</item>
        <item>Grime</item>
        <item>Dance</item>
        <item>Jazz</item>
        <item>Folk Music</item>
    </string-array>

    <string-array name="skillsets">
        <item>Guitarist</item>
        <item>Bass Player</item>
        <item>Keyboard Player</item>
        <item>Drummer</item>
        <item>Producer</item>
        <item>Vocalis</item>
        <item>Top Line Writer</item>
        <item>Recording Enginner</item>
    </string-array>

    <string name="title_activity_select_genres">SelectGenresActivity</string>
    <string name="title_activity_select_skillsets">SelectSkillsetsActivity</string>
    <string name="title_activity_profile_actitvity">ProfileActitvity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="sarch">Search</string>
    <string name="title_activity_home_actyvity">HomeActyvity</string>
    <string name="title_activity_home">HomeActivity</string>

    <string name="menu_show_link">Show link</string>
    <string name="menu_support">Support</string>
    <string name="menu_logout">Logout</string>

    <string name="my_bio">My Bio</string>
    <string name="my_collabs">My Collabs</string>
    <string name="my_music">My Music</string>
    <string name="my_gigs">My Gigs</string>
    <string name="select_main_genres">Select main genres</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
</resources>
