<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_show_link">

    <fragment
        android:id="@+id/nav_show_link"
        android:name="ru.petriwna.mytestideaintech.ui.activity.ui.home.HomeFragment"
        android:label="@string/menu_show_link"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_support"
        android:name="ru.petriwna.mytestideaintech.ui.activity.ui.gallery.GalleryFragment"
        android:label="@string/menu_support"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_show"
        android:name="ru.petriwna.mytestideaintech.ui.activity.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_logout"
        tools:layout="@layout/fragment_slideshow" />

</navigation>