<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgr_prolile"
    tools:context=".ui.activity.EditProfileActivity">


    <ImageView
        android:id="@+id/iv_avatar"
        android:layout_width="match_parent"
        android:layout_height="310dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/profile_avatar" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="162dp"
        android:layout_height="41dp"
        android:layout_marginTop="8dp"
        android:background="@color/textView_profile"
        android:letterSpacing="-0.03"
        android:lineSpacingExtra="-22sp"
        android:text="@string/profile"
        android:textAlignment="center"
        android:textColor="#ffffff"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="8dp"
        android:text="@string/upload_profile_image"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.395"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_avatar" />

    <TextView
        android:id="@+id/tv_user_name"
        android:layout_width="322dp"
        android:layout_height="45dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="25dp"
        android:background="@color/grey"
        android:gravity="center"
        android:letterSpacing="-0.03"
        android:lineSpacingExtra="-2sp"
        android:text="@string/screen_name"
        android:textColor="@color/txt_gey"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.16"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <Button
        android:id="@+id/btn_select_skill"
        android:layout_width="320dp"
        android:layout_height="53dp"
        android:layout_marginTop="24dp"
        android:text="@string/sellect_skillsets"
        android:textColor="#ffffff"
        android:background="@drawable/btn_profile_skillsets"
        app:layout_constraintEnd_toEndOf="@+id/tv_user_name"
        app:layout_constraintStart_toStartOf="@+id/tv_user_name"
        app:layout_constraintTop_toBottomOf="@+id/tv_user_name" />

    <Button
        android:id="@+id/btn_select_genres"
        android:layout_width="316dp"
        android:layout_height="51dp"
        android:layout_marginTop="20dp"
        android:textColor="#ffffff"
        android:text="@string/select_main_genres"
        android:background="@drawable/btn_profile_genres"
        app:layout_constraintEnd_toEndOf="@+id/btn_select_skill"
        app:layout_constraintStart_toStartOf="@+id/btn_select_skill"
        app:layout_constraintTop_toBottomOf="@+id/btn_select_skill" />

    <Button
        android:id="@+id/btn_confirm"
        android:layout_width="0dp"
        android:layout_height="52dp"
        android:background="#000000"
        android:text="@string/confirm"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_select_genres"
        app:layout_constraintVertical_bias="1.0"
        android:gravity="end"/>


</androidx.constraintlayout.widget.ConstraintLayout >