<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgr_register"
    tools:context=".ui.activity.RegisterActivity">

    <ImageView
        android:id="@+id/iv_imageView"
        android:layout_width="264dp"
        android:layout_height="166dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.593"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/collab_logo" />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="51dp"
        android:background="@drawable/edit_text"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_imageView" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="51dp"
        android:background="@drawable/edit_text"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_email" />

    <EditText
        android:id="@+id/confirm_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="51dp"
        android:background="@drawable/edit_text"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:padding="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_password" />

    <EditText
        android:id="@+id/first_last_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="51dp"
        android:background="@drawable/edit_text"
        android:hint="@string/first_and_last_name"
        android:inputType="textPersonName"
        android:padding="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirm_password" />


    <Button
        android:id="@+id/btn_register"
        android:layout_width="269.5dp"
        android:layout_height="68.5dp"
        android:layout_marginStart="147dp"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="146dp"
        android:background="@drawable/btn_login_register"
        android:foreground="?android:attr/selectableItemBackground"
        android:text="@string/register"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/first_last_name" />

    <TextView
        android:id="@+id/sign_in"
        android:layout_width="72dp"
        android:layout_height="29dp"
        android:layout_marginStart="147dp"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="146dp"
        android:lineSpacingExtra="0sp"
        android:text="@string/sign_in"
        android:textColor="#b3ffffff"
        android:textSize="22.3sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_register" />

</androidx.constraintlayout.widget.ConstraintLayout>