<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgr_prolile"
    tools:context=".ui.activity.SelectGenresActivity">


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_genres_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="25dp"
        android:orientation="vertical"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@+id/btn_cancel"
        app:layout_constraintTop_toBottomOf="@+id/search"
        app:reverseLayout="false"
        app:stackFromEnd="false" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="268dp"
        android:layout_height="40dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="145dp"
        android:background="@color/pink"
        android:letterSpacing="-0.03"
        android:lineSpacingExtra="-16sp"
        android:paddingStart="15dp"
        android:text="Select main genres"
        android:textColor="#ffffff"
        android:textSize="27.3sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/search"
        android:drawableEnd="@drawable/ic_mic"
        android:layout_width="371dp"
        android:layout_height="42dp"
        android:layout_marginStart="19dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="19dp"
        android:drawableStart="@drawable/ic_search"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:background="@android:color/white"
        android:hint="@string/sarch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"/>

    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="0dp"
        android:layout_height="52dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_confirm"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="#000000"
        android:textColor="@android:color/white"
        android:text="@string/cancel"/>
    <Button
        android:id="@+id/btn_confirm"
        android:layout_width="0dp"
        android:layout_height="52dp"
        app:layout_constraintStart_toEndOf="@+id/btn_cancel"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textColor="@android:color/white"
        android:text="@string/confirm"/>

</androidx.constraintlayout.widget.ConstraintLayout>